Initial route/component setup, this is more of a save-off point than a meaningful commit

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+{{link-to "Simple Example" "simple-example"}}
+{{link-to "Dep Key Example" "dep-key-example"}}
 
 {{outlet}}
